--- a/pom.xml
+++ b/pom.xml
@@ -5,17 +5,28 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.gb</groupId>
-    <artifactId>Chatty_14022022</artifactId>
+    <artifactId>Chatty</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>client</module>
         <module>server</module>
+        <module>Command</module>
     </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
+    <dependencies>
+
+        <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.36.0.3</version>
+        </dependency>
+
+    </dependencies>
 
 </project>
